pluginconf_DATA = \
    clonebz.conf \
    coredump.conf \
    create-problems.conf \
    errata.conf \
    fedorabz.conf \
    java.conf \
    kerneloops.conf \
    pull-reports.conf \
    python.conf \
    retrace.conf \
    rhelbz.conf \
    save-reports.conf \
    sf-errata.conf \
    sf-prefilter.conf \
    web.conf

pluginconfdir = $(sysconfdir)/faf/plugins

EXTRA_DIST = $(pluginconf_DATA)
