SUBDIRS = fixtures

storage_PYTHON = \
    __init__.py \
    bugzilla.py \
    bugtracker.py \
    common.py \
    debug.py \
    externalfaf.py \
    errata.py \
    llvm.py \
    opsys.py \
    problem.py \
    project.py \
    report.py \
    sf_prefilter.py \
    symbol.py

storagedir = $(pythondir)/pyfaf/storage
